# foundation-os

./: .gitignore  AGENT-HYPOCRISIE-DETECTED.md  CLAUDE.md  CONTEXT.md  CORE-INTELLIGENCE-DOCS.md  FICHIERS-MANQUANTS-PHASE1.md  FOS-ASANA-AUTOMATION-DATA.md  FOS-COMMANDER-DATA.md  FOS-DEVELOPER-ECOSYSTEM-DATA.md  FOS-ERROR-LOG.md  FOS-EVOLUTION-LOG.md  FOS-FINAL-REVOLUTION-SUMMARY.md  FOS-INDEX-DATA.md  FOS-JOURNAL.md  FOS-KNOWLEDGE-DATA.md  FOS-MANIFESTE.md  FOS-META-PLAN.md  FOS-MONITORING.md  FOS-PHASE4-COMPLETE.md  FOS-PHASE4-EXECUTIVE-SUMMARY-REAL.md  FOS-PHASE4-EXECUTIVE-SUMMARY.md  FOS-PHASE4-FINAL-ACCOMPLISHMENT-SUMMARY.md  FOS-PHASE4-IMPLEMENTATION-COMPLETE.md  FOS-PHASE4-OPTIMIZATIONS.md  FOS-PHASE4-REAL-MCP-ORCHESTRATION-DATA.md  FOS-PHASE4-REAL-MCP-VALIDATION-RESULTS.md  FOS-PHASE4-ROADMAP.md  FOS-PHASE5-ASANA-IMPLEMENTATION-COMPLETE.md  FOS-PHASE5-CONNECTED-IMPLEMENTATION.md  FOS-PHASE5-CONNECTED-LIVE-DEMO-RESULTS.md  FOS-PHASE5-FIGMA-DESIGN-VALIDATION-DATA.md  FOS-PHASE5-FIGMA-IMPLEMENTATION-COMPLETE.md  FOS-PHASE5-FINAL-SUMMARY.md  FOS-PHASE5-MISSION-ACCOMPLISHED.md  FOS-PHASE5-NOTION-SYNC-IMPLEMENTATION.md  FOS-PHASE5-ROADMAP.md  FOS-PHASE6-FOUNDATION-ROADMAP.md  FOS-PLAN-MASTER-v2.md  FOS-REVOLUTION-COMPLETE.md  FOS-SCALE-ORCHESTRATOR-DATA.md  (+23 more)
modules/finance/trading/: .env.example  .gitignore  README.md  pyproject.toml
modules/finance/trading/src/trading/: __init__.py
modules/finance/trading/src/trading/analysis/: metrics.py  regime.py  reports.py
modules/finance/trading/src/trading/backtest/: fees.py  funding.py  latency.py  runner.py  slippage.py
modules/finance/trading/tests/fixtures/: ccxt_ohlcv_sample.json
modules/finance/trading/tests/integration/: test_runner_smoke.py  test_webhook_receiver.py
modules/finance/trading/tests/smoke/: test_cli_help.py  test_imports.py
(+1308 files in other folders)
