[project]
name = "trading"
version = "0.1.0"
description = "Foundation OS — backtest engine crypto + Pine Script bridge + 3Commas execution"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kevin Noel", email = "kevin.noel.divers@gmail.com" }]

dependencies = [
    "nautilus-trader>=1.200",
    "ccxt>=4.4",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.8",
    "pandas>=2.2",
    "numpy>=2.0,<3",
    "pyarrow>=16",
    "duckdb>=1.1",
    "quantstats>=0.0.65",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "hmmlearn>=0.3",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.112",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests",
]

[project.scripts]
trading = "trading.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PTH", "RET", "SIM"]
ignore = ["E501"]  # line-length deja gere par formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --cov=src/trading --cov-report=term-missing"
markers = [
    "slow: tests > 1s",
    "integration: requires network or fixtures",
    "smoke: quick sanity checks",
]
